Sphinx Style change

--- a/static/main.css
+++ b/static/main.css
@@ -125,7 +125,7 @@ div#document {
   border-width: thin;
 }
 div#document * h1{
-  font-family: 'Migi 1P', 'Bitstream Vera Sans', 'Sans', cursive;
+  font-family: 'Migu 1P', 'Bitstream Vera Sans', 'Sans', cursive;
   font-weight: normal;
   font-style: oblique;
   color: #344F7B;
