--- a/static/main.css
+++ b/static/main.css
@@ -19,6 +19,7 @@ body {
   color: #000;              /* 黒の文字 */
   margin: 0;
   padding: 0;
+  line-height: 2.0em;
 }
 p.topic-title.first{
   background-color: rgb(255, 255, 120);
